# FamilyKO

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: build.yml
installer/: DISCLAIMER.txt
installer/wix/: Product.wxs  UI.wxs
src/: common.c  common.h  main.c
src/ai/: ollama.c  ollama.h  summarizer.c  summarizer.h
src/collectors/: app_usage.c  app_usage.h  file_ops.c  file_ops.h  runner.c  runner.h  web_history.c  web_history.h
src/control/: blacklist.c  blacklist.h  enforcer.c  enforcer.h  time_limits.c  time_limits.h
src/guard/: acl.c  acl.h  auto_start.c  auto_start.h  installer.c  installer.h  watcher_service.c
src/installer/: install_wizard.c  uninstall.c
src/query/: search.c  search.h  time_ranges.c  time_ranges.h
src/security/: hotkey.c  hotkey.h  lockout.c  lockout.h  password.c  password.h
src/storage/: db.c  db.h  repo.c  repo.h
src/ui/: ai_view.c  ai_view.h  boot_notice.c  boot_notice.h  control_view.c  control_view.h  dialogs.c  dialogs.h  event_view.c  event_view.h  login.c  login.h  main_window.c  main_window.h  settings_view.c  settings_view.h  stats_view.c  stats_view.h  tray.c  tray.h
tests/: test_password.c  test_stats.c  test_time_ranges.c
